fix kgx call
